crates/ink/tests/ui/contract/fail/constructor/constructor-return-result-invalid.stderr
error[E0277]: the trait bound `ConstructorOutputValue<Result<u8, contract::Error>>: ConstructorOutput<contract::Contract>` is not satisfied
  --> tests/ui/contract/fail/constructor/constructor-return-result-invalid.rs:16:9
   |
16 | /         pub fn constructor() -> Result<u8, Error> {
17 | |             Ok(5_u8)
18 | |         }
   | |_________^ the trait `ConstructorOutput<contract::Contract>` is not implemented for `ConstructorOutputValue<Result<u8, contract::Error>>`
   |
   = help: the following other types implement trait `ConstructorOutput<C>`:
             ConstructorOutputValue<C>
             ConstructorOutputValue<Result<C, E>>

error[E0276]: impl has stricter requirements than trait
  --> tests/ui/contract/fail/constructor/constructor-return-result-invalid.rs:16:9
   |
16 | /         pub fn constructor() -> Result<u8, Error> {
17 | |             Ok(5_u8)
18 | |         }
   | |_________^ impl has extra requirement `ConstructorOutputValue<Result<u8, contract::Error>>: ConstructorOutput<contract::Contract>`

error[E0277]: the trait bound `Result<u8, contract::Error>: ConstructorReturnType<ContractRefFor, ink::abi::Ink>` is not satisfied
  --> tests/ui/contract/fail/constructor/constructor-return-result-invalid.rs:16:33
   |
16 |           pub fn constructor() -> Result<u8, Error> {
   |           -                       ^^^^^^^^^^^^^^^^^ the trait `ConstructorReturnType<ContractRefFor, ink::abi::Ink>` is not implemented for `Result<u8, contract::Error>`
   |  _________|
   | |
17 | |             Ok(5_u8)
18 | |         }
   | |_________- required by a bound introduced by this call
   |
   = help: the following other types implement trait `ConstructorReturnType<C, Abi>`:
             `Result<C, E>` implements `ConstructorReturnType<C, Abi>`
             `Result<contract::Contract, E>` implements `ConstructorReturnType<ContractRefFor, Abi>`
note: required by a bound in `CreateBuilder::<E, ContractRef, Limits, Args, Unset<ReturnType<()>>, Abi>::returns`
  --> $WORKSPACE/crates/env/src/call/create_builder.rs
   |
   |     pub fn returns<R>(
   |            ------- required by a bound in this associated function
...
   |         R: ConstructorReturnType<ContractRef, Abi>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CreateBuilder::<E, ContractRef, Limits, Args, Unset<ReturnType<()>>, Abi>::returns`

error[E0277]: the trait bound `ConstructorOutputValue<Result<u8, contract::Error>>: ConstructorOutput<contract::Contract>` is not satisfied
 --> tests/ui/contract/fail/constructor/constructor-return-result-invalid.rs:6:16
  |
6 |     pub struct Contract {}
  |                ^^^^^^^^ the trait `ConstructorOutput<contract::Contract>` is not implemented for `ConstructorOutputValue<Result<u8, contract::Error>>`
  |
  = help: the following other types implement trait `ConstructorOutput<C>`:
            ConstructorOutputValue<C>
            ConstructorOutputValue<Result<C, E>>
